errors
   Compiling ee-fbsd v0.1.0 (/home/lucy/ee-fbsd)
warning: unused imports: `Block`, `Borders`, `Clear`, `Paragraph`, and `Text`
  --> src/ui/mod.rs:18:15
   |
18 |     widgets::{Block, Borders, Paragraph, Clear},
   |               ^^^^^  ^^^^^^^  ^^^^^^^^^  ^^^^^
19 |     text::{Spans, Span, Text},
   |                         ^^^^
   |
   = note: `#[warn(unused_imports)]` on by default

error[E0308]: mismatched types
  --> src/syntax/mod.rs:17:13
   |
16 |         let numbers_regex = match Regex::new(r"\b\d+\b".to_string()) {
   |                                   ---------------------------------- this expression has type `Regex`
17 |             Ok(regex) => Some(regex),
   |             ^^^^^^^^^ expected `Regex`, found `Result<_, _>`
   |
   = note: expected struct `Regex`
                found enum `std::result::Result<_, _>`

error[E0308]: mismatched types
  --> src/syntax/mod.rs:18:13
   |
16 |         let numbers_regex = match Regex::new(r"\b\d+\b".to_string()) {
   |                                   ---------------------------------- this expression has type `Regex`
17 |             Ok(regex) => Some(regex),
18 |             Err(_) => None
   |             ^^^^^^ expected `Regex`, found `Result<_, _>`
   |
   = note: expected struct `Regex`
                found enum `std::result::Result<_, _>`

warning: unused variable: `layout`
  --> src/ui/mod.rs:82:17
   |
82 |             let layout = Layout::default()
   |                 ^^^^^^ help: if this is intentional, prefix it with an underscore: `_layout`
   |
   = note: `#[warn(unused_variables)]` on by default

warning: unused variable: `tabs`
  --> src/ui/mod.rs:93:17
   |
93 |             let tabs = Spans::from(self.render_tabs(buffer));
   |                 ^^^^ help: if this is intentional, prefix it with an underscore: `_tabs`

warning: unused variable: `content`
  --> src/ui/mod.rs:96:17
   |
96 |             let content = self.render_editor_content(buffer);
   |                 ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_content`

error[E0502]: cannot borrow `self.terminal` as mutable because it is also borrowed as immutable
  --> src/ui/mod.rs:81:9
   |
81 |           self.terminal.draw(|f| {
   |           ^             ---- --- immutable borrow occurs here
   |           |             |
   |  _________|             immutable borrow later used by call
   | |
82 | |             let layout = Layout::default()
83 | |                 .direction(Direction::Vertical)
84 | |                 .constraints([
...  |
93 | |             let tabs = Spans::from(self.render_tabs(buffer));
   | |                                    ---- first borrow occurs due to use of `*self` in closure
...  |
98 | |             // ...draw the UI using the layout...
99 | |         })?;
   | |__________^ mutable borrow occurs here

Some errors have detailed explanations: E0308, E0502.
For more information about an error, try `rustc --explain E0308`.
warning: `ee-fbsd` (lib) generated 4 warnings
error: could not compile `ee-fbsd` (lib) due to 3 previous errors; 4 warnings emitted
